--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -1,5 +1,5 @@
 <alert *ngIf="setAlert != null" [alert]="setAlert"></alert>
-<div class="container mt-3 px-md-0">
+<div class="container mt-3 px-md-0" id="create-app">
     <!--<div class="container mt-3">
         <div class="row">
             <div class="col-lg-6 col-md-12">
@@ -21,7 +21,7 @@
     </div>-->
     <div class="row justify-content-start mt-3">
         <div class="col-md-10 col-sm-12 col-lg-5" id="create-table" style="margin-bottom: 20px">
-            <div class="card shadow-c c-bordered bg-transparent {{appTheme['box-one']}} br-20">
+            <div class="card shadow-c c-bordered {{appTheme['border']}} bg-transparent {{appTheme['box-one']}} br-20">
                 <div class="card-body px-md-4">
                     <form action="#" novalidate>
                         <div class="form-group">
@@ -32,7 +32,7 @@
                                                   (click)="getInputSelection(el)"
                                                   (input)="getInputSelection(el)" (keyup)="getInputSelection(el)"
                                                   [(ngModel)]="postMessage"
-                                                  class="nt-form-control w-75 ml-auto br-20"
+                                                  class="nt-form-control w-75 ml-auto br-20 {{appTheme['border']}} {{appTheme['box-two']}}"
                                                   cols="50"
                                                   id="message_box"
                                                   name="message"
@@ -102,7 +102,7 @@
                             <!-- Tab panels -->
                             <div class="tab-content mt-3">
                                 <!-- Panel 1 -->
-                                <div class="tab-pane fade in show position-relative" id="panel1" role="tabpanel"
+                                <div class="tab-pane fade in show position-relative {{appTheme['box-two']}}" id="panel1" role="tabpanel"
                                      style="overflow-y: scroll !important;">
                                     <div class="m-0 p-2">
                                         <div class="card-columns">
@@ -152,19 +152,19 @@
                                 </div>
                                 <!-- Panel 1 -->
                                 <!-- Panel 2 -->
-                                <div class="tab-pane fade position-relative" id="panel2" role="tabpanel">
+                                <div class="tab-pane fade position-relative {{appTheme['box-two']}}" id="panel2" role="tabpanel">
                                     <div class="container p-2">
                                         <emoji-app (myClick)="setData($event)"></emoji-app>
                                     </div>
                                 </div>
                                 <!-- Panel 2 -->
                                 <!-- Panel 3 -->
-                                <div class="tab-pane fade in show active" id="panel3" role="tabpanel">
+                                <div class="tab-pane fade in show active {{appTheme['box-two']}}" id="panel3" role="tabpanel">
                                     <div class="container mt-2 w-100">
                                         <form action="" novalidate>
                                             <div class="form-group">
                                                 <input (keyup.enter)="addTag()" [(ngModel)]="hashtag"
-                                                       class="nt-form-control br-20"
+                                                       class="nt-form-control br-20 {{appTheme['box-one']}} {{appTheme['border']}}"
                                                        id="hash" placeholder="Hash tags ..."
                                                        type="text">
                                                 <button (click)="addTag()"
@@ -199,32 +199,32 @@
             </div>
         </div>
         <div class="col-md-12 col-sm-12 col-lg-7">
-            <div class="card shadow-c bg-transparent {{appTheme['box-one']}} br-20 px-2 py-4 mb-3 c-bordered">
+            <div class="card shadow-c bg-transparent {{appTheme['box-one']}} br-20 px-2 py-4 mb-3 c-bordered {{appTheme['border']}}">
                 <div class="card bg-transparent px-2 border-0 post-table br-20">
                     <div class="card-body">
-                        <div class="row c-bordered box-three sticky-top">
-                            <material-checkbox (click)="getAllIds()" [(checked)]="allIsChecked"></material-checkbox>
+                        <div class="row c-bordered {{appTheme['box-one']}} {{appTheme['border']}} sticky-top">
+                            <material-checkbox (click)="getAllIds()" [(checked)]="allIsChecked" class="{{appTheme['text-muted']}}"></material-checkbox>
                             <material-button (click)="batchDelete()" [disabled]="deleteIds.isEmpty">
-                                <material-icon icon="delete"></material-icon>
+                                <material-icon icon="delete" class="{{appTheme['text-muted']}}"></material-icon>
                             </material-button>
                             <div class="my-auto mx-3">
-                                <span>{{deleteIds.length}}/{{currentPosts.length}}</span>
+                                <span class="{{appTheme['text-colour']}}">{{deleteIds.length}}/{{currentPosts.length}}</span>
                             </div>
                         </div>
 
                         <div *ngIf="currentPosts.isNotEmpty" class="create-table-info">
                             <div *ngFor="let currentPost of currentPosts; let $i=index"
-                                 class="row c-bordered {{appTheme['box-two']}} post-row">
+                                 class="row c-bordered post-item {{appTheme['box-two']}} {{appTheme['border']}} post-row">
                                 <material-checkbox (click)="getId($i)"
-                                                   [(checked)]="currentPost.checkedState"></material-checkbox>
-                                <div [title]="currentPost.postMessage" class="mr-auto my-auto w-50 d-post-text">
+                                                   [(checked)]="currentPost.checkedState" class="{{appTheme['text-muted']}}"></material-checkbox>
+                                <div [title]="currentPost.postMessage" class="mr-auto my-auto w-50 d-post-text {{appTheme['text-muted']}}">
                                     {{currentPost.postMessage}}
                                 </div>
                                 <div (click)="editPost($i)" class="nt-circle light-button cursor-pointer mr-3 my-auto">
                                     <span *ngIf="editKeys[$i] == false" class="fa fa-edit font-weight-bold"></span>
                                     <span *ngIf="editKeys[$i] == true" class="fa fa-close font-weight-bold"></span>
                                 </div>
-                                <material-icon (click)="remove($i)" class="my-auto cursor-pointer mr-3"
+                                <material-icon (click)="remove($i)" class="my-auto cursor-pointer mr-3 {{appTheme['text-muted']}}"
                                                icon="delete_outline"></material-icon>
                             </div>
                         </div>
