--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3" id="post-app" style="height: calc(100vh - 80px)">
+<div class="container mt-3 px-md-0" id="post-app" style="height: calc(100vh - 80px)">
     <h5 class="text-center font-weight-bold {{appTheme['text-muted']}} mt-3">Post Accounts</h5>
     <div class="text-center font-weight-bold figure-caption {{appTheme['text-muted']}} mb-4 separator">Add accounts under any of the sections
     </div>
@@ -20,7 +20,7 @@
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(0)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3"
+                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -48,7 +48,7 @@
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(1)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3"
+                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -75,7 +75,7 @@
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(2)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3"
+                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -94,14 +94,14 @@
                 <div class="card-body m-2">
                     <div class="text-center">
                         <span class="float-left ml-2 mr-1">
-                            <button (click)="showPopup(3)" class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3"
+                            <button (click)="showPopup(3)" class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-plus"></span>
                             </button>
                         </span>
                         <span class="float-right mr-2 ml-1">
                             <button (click)="showViewPopup(3)"
-                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3"
+                                    class="btn btn-sm in rounded-circle btn-outline-dark br-20 px-3 {{appTheme['text-muted']}}"
                                     type="button">
                                 <span class="fa fa-eye"></span>
                             </button>
@@ -114,7 +114,7 @@
     </div>
 </div>
 <div *ngIf="accountTabs[0] || accountTabs[1] || accountTabs[2] || accountTabs[3]"
-     class="dialog-box card bg-transparent border-0 shadow-c br-20" id="dialog">
+     class="dialog-box {{appTheme['box-one']}} card bg-transparent border-0 shadow-c br-20" id="dialog">
     <div class="card-header bg-transparent border-0 text-center" id="media-icon">
         <div class="nt-circle">
             <img *ngIf="accountTabs[0]" alt="facebook-icon" class="nt-center img-fluid" height="100px"
@@ -172,7 +172,7 @@
 </div>
 
 <div *ngIf="viewTabs[0] || viewTabs[1] || viewTabs[2] || viewTabs[3]"
-     class="dialog-box card bg-transparent border-0 shadow-c br-20" id="view-dialog">
+     class="dialog-box {{appTheme['box-one']}} card bg-transparent border-0 shadow-c br-20" id="view-dialog">
 
     <div class="font-nyata">
         <div class="text-center font-weight-bold mt-4 {{appTheme['text-colour']}}">
@@ -186,7 +186,7 @@
     <div class="mt-4 mb-2 px-2">
         <template [ngIf]="viewTabs[0] || viewTabs[2]">
             <div *ngIf="accounts.facebook.isNotEmpty"
-                 class="{{appTheme['box-one']}} mb-1 br-20 box px-2">
+                 class="{{appTheme['box-one']}} mb-1 br-20 box {{appTheme['box-two']}} px-2">
                 <div class="card bg-transparent border-0 br-20 shadow mb-2" *ngFor="let email of accounts.facebook; let $i=index" >
                     <div class="card-body border-0 row">
                         <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
@@ -209,7 +209,7 @@
         </template>
         <template [ngIf]="viewTabs[1]">
             <div *ngIf="accounts.twitter.isNotEmpty"
-                 class="{{appTheme['box-one']}} mb-1 br-20 box px-2">
+                 class="{{appTheme['box-one']}} mb-1 br-20 box {{appTheme['box-two']}} px-2">
                 <div class="card bg-transparent border-0 br-20 shadow mb-2" *ngFor="let email of accounts.twitter; let $i=index" >
                     <div class="card-body border-0 row">
                         <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
@@ -232,7 +232,7 @@
         </template>
         <template [ngIf]="viewTabs[3]">
             <div *ngIf="accounts.linkedin.isNotEmpty"
-                 class="{{appTheme['box-one']}} mb-1 br-20 box px-2">
+                 class="{{appTheme['box-one']}} mb-1 br-20 box {{appTheme['box-two']}} px-2">
                 <div class="card bg-transparent border-0 br-20 shadow mb-2" *ngFor="let email of accounts.linkedin; let $i=index" >
                     <div class="card-body border-0 row">
                         <span class="fa fa-user-circle col-3 mx-auto fa-2x {{appTheme['text-muted']}} my-auto"></span>
