--- a/lib/src/dashboard_component/widgets/emojis_component/emojis_component.html
+++ b/lib/src/dashboard_component/widgets/emojis_component/emojis_component.html
@@ -1,14 +1,7 @@
-<ul class="nav card-body c-bordered sticky-top py-2 br-20"
-    style="overflow: hidden !important; height: 50px !important; width: 100% !important; background: rgba(251,250,250,0.97) !important; border: 0; box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08) !important;">
+<ul class="nav card-body c-bordered {{appTheme['border']}} {{appTheme['box-one']}} sticky-top py-2 br-20"
+    style="overflow: hidden !important; height: 50px !important; width: 100% !important; background: rgba(251,250,250,0.97); border: 0; box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08) !important;">
 
     <div id="emoji_carousel" class="carousel slide w-100" data-ride="carousel">
-        <!--                                                <ol class="carousel-indicators">-->
-        <!--                                                    <li data-target="#emoji_carousel" data-slide-to="0" class="active"></li>-->
-        <!--                                                    <li data-target="#emoji_carousel" data-slide-to="1"></li>-->
-        <!--                                                    <li data-target="#emoji_carousel" data-slide-to="2"></li>-->
-        <!--                                                    <li data-target="#emoji_carousel" data-slide-to="3"></li>-->
-        <!--                                                    <li data-target="#emoji_carousel" data-slide-to="4"></li>-->
-        <!--                                                </ol>-->
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active mx-auto">
                 <div class="row mx-2">
@@ -65,7 +58,7 @@
                     <div class="mx-auto">
                         <li class="mx-auto text-center mt-1">
                             <a class="text-danger px-4" data-toggle="tab" href="#emo7" role="tab">
-                                <span class="fa fa-wine-bottle"></span>
+                                <span class="fa fa-glass"></span>
                             </a>
                         </li>
                     </div>
@@ -79,7 +72,7 @@
                     <div class="mx-auto">
                         <li class="mx-auto text-center mt-1">
                             <a class="text-info px-4" data-toggle="tab" href="#emo9" role="tab">
-                                <span class="fa fa-people-carry"></span>
+                                <span class="fa fa-hand-grab-o"></span>
                             </a>
                         </li>
                     </div>
@@ -95,7 +88,7 @@
                     <div class="mx-auto">
                         <li class="mx-auto text-center mt-1">
                             <a class="{{appTheme['text-colour']}} px-4" data-toggle="tab" href="#emo10" role="tab">
-                                <span class="fa fa-toolbox"></span>
+                                <span class="fa fa-scissors"></span>
                             </a>
                         </li>
                     </div>
