--- a/lib/src/dashboard_component/widgets/filter_component/filter_component.html
+++ b/lib/src/dashboard_component/widgets/filter_component/filter_component.html
@@ -41,37 +41,40 @@
         </material-expansionpanel>
     </material-expansionpanel-set>
 </form>-->
-<div class=" row w-100 m-0 p-0 d-block d-md-none d-lg-none">
+<div class=" row w-100 text-center m-0 p-0 d-block d-md-none d-lg-none">
     <div class="px-1 mb-3">
-        <button class="btn btn-lg btn-block btn-outline-dark br-20" (click)="toggleFilterDropdown()">
-            <span class="fa fa-filter"></span>
+        <button class="btn btn-lg btn-block btn-outline-dark {{appTheme['text-muted']}} br-20" (click)="toggleFilterDropdown()">
+            <span class="fa fa-filter {{appTheme['text-muted']}}"></span>
             Apply filters here
         </button>
-        <div class="br-20 filter-dropdwn shadow mx-auto p-2" *ngIf="filterDropdown" id="filter-dropdwn">
+        <div class="br-20 filter-dropdwn {{appTheme['box-two']}} shadow mx-auto p-2" *ngIf="filterDropdown" id="filter-dropdwn">
             <form novalidate #filterForm="ngForm" (ngSubmit)="onSubmit()" class="p-3">
-                <select name="filter" id="filter-mobile" class="nt-form-control border-0 br-10" [(ngModel)]="selectedFilter">
+                <select name="filter" id="filter-mobile" class="nt-form-control border-0 br-10 {{appTheme['box-one']}}" [(ngModel)]="selectedFilter">
                     <option value="" disabled selected>Filter by:</option>
                     <option [value]="filter" *ngFor="let filter of filters">{{filter}}</option>
                 </select>
-                <select name="number" id="number-mobile" class="nt-form-control border-0 br-10 mt-2" [(ngModel)]="selectedNumber">
+                <select name="number" id="number-mobile" class="nt-form-control border-0 br-10 {{appTheme['box-one']}} mt-2" [(ngModel)]="selectedNumber">
                     <option value="" disabled selected>Posts per page:</option>
                     <option [value]="number" *ngFor="let number of numbers">{{number}}</option>
                 </select>
                 <button type="submit" class="btn btn-sm btn-block btn-primary btn-sm br-10 px-3 mt-2" [class.disabled]="selectedFilter.isEmpty">Fetch post</button>
+                <div class="mt-3 nt-circle add-button bg-danger" *ngIf="filterDropdown" (click)="toggleFilterDropdown()">
+                    <span class="fa fa-times text-white"></span>
+                </div>
             </form>
         </div>
     </div>
 </div>
 <form novalidate #filterForm="ngForm" (ngSubmit)="onSubmit()" class="d-none d-md-block d-lg-block">
-    <div class="row c-bordered box-three sticky-top mx-2 br-20 text-center">
+    <div class="row c-bordered {{appTheme['box-two']}} {{appTheme['border']}} sticky-top mx-2 br-20 text-center">
         <div class="col-3 m-auto">
-            <select name="filter" id="filter" class="nt-form-control border-0 br-20" [(ngModel)]="selectedFilter">
+            <select name="filter" id="filter" class="{{appTheme['box-two']}} nt-form-control border-0 br-20" [(ngModel)]="selectedFilter">
                 <option value="" disabled selected>Filter by:</option>
                 <option [value]="filter" *ngFor="let filter of filters">{{filter}}</option>
             </select>
         </div>
         <div class="col-3 m-auto">
-            <select name="number" id="number" class="nt-form-control border-0 br-20" [(ngModel)]="selectedNumber">
+            <select name="number" id="number" class="{{appTheme['box-two']}} nt-form-control border-0 br-20" [(ngModel)]="selectedNumber">
                 <option value="" disabled selected>Posts per page:</option>
                 <option [value]="number" *ngFor="let number of numbers">{{number}}</option>
             </select>
@@ -89,7 +92,7 @@
             </button>
         </div>
         <div class="col-2 m-auto">
-            <span>{{selected}}/{{filteredPosts.length}}</span>
+            <span class="{{appTheme['text-muted']}}">{{selected}}/{{filteredPosts.length}}</span>
         </div>
     </div>
 </form>
