3 days more to launch

--- a/lib/src/dashboard_component/view_post_component/view_post_component.html
+++ b/lib/src/dashboard_component/view_post_component/view_post_component.html
@@ -32,7 +32,7 @@
                             <td>
                                 <span class="post-message-text figure-caption" [title]="filteredPost.postMessage">{{filteredPost.postMessage}}</span>
                             </td>
-                            <td class="tag-host" [title]="filteredPost.postTag"><span *ngFor="let tag of filteredPost.postTag"
+                            <td class="tag-host tags-text" [title]="filteredPost.postTag"><span *ngFor="let tag of filteredPost.postTag"
                                                        class="tag tags-text figure-caption">{{tag}}</span></td>
                             <td>
                                 <span *ngIf="filteredPost.fbStatus"
@@ -49,7 +49,7 @@
                                     <button class="btn btn-sm btn-outline-primary px-3 br-20">Not posted</button>
                                 </span>
                             </td>
-                            <td><span class="created-at-text figure-caption" [title]="presentDate(filteredPost.createdOn) | date">{{presentDate(filteredPost.createdOn) | date}}</span>
+                            <td><span class="created-at-text figure-caption" title="{{presentDate(filteredPost.createdOn) | date}} - {{presentTime(filteredPost.createdOn)}}">{{presentDate(filteredPost.createdOn) | date}} - {{presentTime(filteredPost.createdOn)}}</span>
                             </td>
                             <td class="text-center">
                                 <div (click)="togglePopup($i)"
@@ -166,14 +166,15 @@
                 </form>
                 <div class="row">
                     <div class="col-12 tag-container mx-0 px-2 c-bordered br-10">
-                        <material-chips *ngIf="postTags.isNotEmpty">
-                            <material-chip (remove)="removeTag($i)"
-                                           *ngFor="let postTag of postTags; let $i = index"
-                                           [value]="postTag" class="col-auto">
-                                {{postTag}}
+                        <material-chips *ngIf="hashTags.isNotEmpty">
+                            <material-chip *ngFor="let hashTag of hashTags; let $j = index"
+                                           [value]="hashTag"
+                                           (remove)="removeTag($j)"
+                                           class="col-auto">
+                                {{hashTag}}
                             </material-chip>
                         </material-chips>
-                        <div *ngIf="postTags.isEmpty" class="nt-center text-muted font-weight-bold">
+                        <div *ngIf="hashTags.isEmpty" class="nt-center text-muted font-weight-bold">
                             + Add some tags here
                         </div>
                     </div>
@@ -194,7 +195,37 @@
             <div class="font-weight-bold h5 mb-2 mx-auto">Post Image</div>
             <div class="col-12 my-auto">
                 <div class="m-0 p-2" id="image-holder">
-                    <image-app></image-app>
+                    <div class="card-columns">
+                        <div class="card bg-transparent p-2 border-0" *ngFor="let imgPath of imgPaths; let $i = index" style="border-radius: 10px">
+                            <a target="_blank" href="{{imgPath}}" class="post-image img-center">
+                                <div class="row mx-0 w-100 my-1" *ngIf="imagesProgress[$i] != 100 && !failed">
+                                    <div class="col-sm-12 m-0 p-0">
+                                        <progress max="100" [value]="imagesProgress[$i]" style="height: 5px; width: 100%"></progress>
+                                    </div>
+                                </div>
+                                <img src="{{imgPath}}" alt="{{imgPath}}" class="img-fluid img-center" [class.blur]="imagesProgress[$i] != 100" style="border-radius: 5px">
+                            </a>
+                            <div class="nt-center">
+                                <div class="nt-circle add-button bg-dark" style="width: 20px; height: 20px" *ngIf="!failed" (click)="deleteFile($i)">
+                                    <span class="fa fa-times small text-white"></span>
+                                </div>
+                                <div class="nt-circle add-button bg-dark" style="width: 20px; height: 20px" *ngIf="failed">
+                                    <span class="fa fa-refresh small text-white"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card pl-3 py-3 bg-transparent border-0" *ngIf="counter < 6">
+                            <form #form enctype="multipart/form-data" class="m-auto">
+                                <div class="custom-upload">
+                                    <input (change)="handleUpload(form, $event)" name="media_file" accept="image/*"
+                                           type="file">
+                                    <div class="nt-circle bg-primary add-button">
+                                        <span class="fa fa-plus text-white"></span>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
                 <div class="row mx-0 mt-3 p-0">
                     <span (click)="switchTabs(1)"
