--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -113,8 +113,7 @@
                                                     <div *ngIf="imagesProgress[$i] != 100 && !failed"
                                                          class="row mx-0 w-100 my-1">
                                                         <div class="col-sm-12 m-0 p-0">
-                                                            <div class="progress-div"
-                                                                 style="width: {{imagesProgress[$i]}}%;"></div>
+                                                            <progress max="100" [value]="imagesProgress[$i]" style="height: 5px; width: 100%"></progress>
                                                         </div>
                                                     </div>
                                                     <img [class.blur]="imagesProgress[$i] != 100" alt="{{imgPath}}"
@@ -138,9 +137,10 @@
                                             <div *ngIf="counter < 6" class="card pl-3 py-3 bg-transparent border-0">
                                                 <form #form class="m-auto" enctype="multipart/form-data">
                                                     <div class="custom-upload">
-                                                        <input (change)="handleUpload(form, $event)" accept="image/*"
-                                                               multiple="multiple"
-                                                               name="media_file" type="file">
+                                                        <input (change)="handleUpload(form, $event)"
+                                                               accept="image/*"
+                                                               name="media_file"
+                                                               type="file">
                                                         <div class="nt-circle bg-primary add-button">
                                                             <span class="fa fa-plus text-white"></span>
                                                         </div>
@@ -220,12 +220,12 @@
                                 <div [title]="currentPost.postMessage" class="mr-auto my-auto w-50 d-post-text {{appTheme['text-muted']}}">
                                     {{currentPost.postMessage}}
                                 </div>
-                                <div (click)="editPost($i)" class="nt-circle light-button cursor-pointer mr-3 my-auto">
+                                <div (click)="editPost($i)" class="nt-circle light-button cursor-pointer mr-3 my-auto" style="zoom: 0.7">
                                     <span *ngIf="editKeys[$i] == false" class="fa fa-edit font-weight-bold"></span>
                                     <span *ngIf="editKeys[$i] == true" class="fa fa-close font-weight-bold"></span>
                                 </div>
                                 <material-icon (click)="remove($i)" class="my-auto cursor-pointer mr-3 {{appTheme['text-muted']}}"
-                                               icon="delete_outline"></material-icon>
+                                               icon="delete_outline" style="zoom:0.8"></material-icon>
                             </div>
                         </div>
 
@@ -236,8 +236,8 @@
                         </div>
                         <div *ngIf="loading">
                             <div class="nt-center {{appTheme['text-muted']}}">
-                                <img alt="Loading..." class="img-fluid" src="img/load.gif"
-                                     style="border-radius: 20px; background: rgba(255,255,255,0.95)">
+                                <!--<img alt="Loading..." class="img-fluid" src="img/load.gif"
+                                     style="border-radius: 20px; background: rgba(255,255,255,0.95)">-->
                             </div>
                         </div>
                     </div>
@@ -246,4 +246,19 @@
         </div>
     </div>
 </div>
+<div *ngIf="exitPopup" class="popup br-10 p-3 shadow">
+    <div class="p-4 br-10 text-white" style="background: #1f1f1f">
+        You would <span class="text-danger">lose</span> all currently uploaded images <br>
+        <span class="figure-caption">If you leave this component</span>
 
+        <div class="mt-3 p-0 text-center">
+            <button class="btn btn-sm btn-light br-20 px-4 mr-3" (click)="deleteFinalImages()">
+                <span *ngIf="!isDel">Leave now</span>
+                <span *ngIf="isDel">...</span>
+            </button>
+            <button class="btn btn-sm btn-danger br-20 px-4" (click)="closePopup()">
+                Stay
+            </button>
+        </div>
+    </div>
+</div>
